Fixed GitHub Pages deployment issues

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://So1jonismatov.github.io/Dashboard_page",
+  "homepage": "https://So1jonismatov.github.io/Dashboard_page/",
   "name": "dashboard_page",
   "version": "0.1.0",
   "private": true,
